Changed figure styling
Add space, color and the font size

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -27,13 +27,9 @@ blockquote cite::before {
  ***
 *****/
 
-/* figure {
-    display: flex;
-    flex-direction: column;
-    gap: var(--layout-space-sm);
-    padding: var(--layout-space-sm);
-    align-items: center;
-} */
+figure {
+    text-align: center;
+}
 
 figure img {
     width: 100%;
@@ -41,6 +37,8 @@ figure img {
 
 figcaption {
     display: inline-block;
+    padding: var(--fixed-space-xs) var(--fixed-space-md);
+    margin-top: var(--layout-space-sm);
 }
 
 img {
