--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -22,11 +22,11 @@ body {
 }
 
 .content__row.show-grid .grid .col:nth-child(even) {
-    background-color: var(--color-neutral-20);
+    background-color: var(--color-neutral-30);
 }
 
 .content__row.show-grid .grid .col:nth-child(odd) {
-    background-color: var(--color-neutral-30);
+    background-color: var(--color-neutral-50);
 }
 
 /*****
@@ -144,6 +144,7 @@ a:active {
 *****/
 
 figcaption {
+    background-color: var(--color-scheme-background);
     color: var(--color-scheme-text-shade);
 }
 
@@ -177,9 +178,9 @@ code, mark {
 
 @media (prefers-color-scheme: dark) {
 
-    /* .page > *:nth-child(odd) {
+    .page__header {
         background-color: var(--color-neutral-60);
-    } */
+    }
 
     .page__footer > div:nth-child(even) {
         background-color: var(--color-neutral-70);
@@ -202,9 +203,9 @@ code, mark {
 
 @media (prefers-color-scheme: light) {
 
-    /* .page > *:nth-child(odd) {
+    .page__header {
         background-color: var(--color-neutral-10);
-    } */
+    }
 
     .page__footer > div:nth-child(even) {
         background-color: var(--color-neutral-20);
