--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -37,8 +37,8 @@ figure img {
 
 figcaption {
     display: inline-block;
-    padding: var(--fixed-space-xs) var(--fixed-space-md);
-    margin-top: var(--layout-space-sm);
+    /* padding: var(--fixed-space-xs) var(--fixed-space-md); */
+    
 }
 
 img {
@@ -72,3 +72,15 @@ img {
  ***   Work In Progress
  ***
 *****/
+
+code, mark {
+    padding: var(--fixed-space-xs) var(--fixed-space-sm);
+}
+
+/* .gallery figure img {
+    padding: var(--fixed-space-md);
+} */
+
+/* figure.gallery figcaption {
+    margin-top: var(--fixed-space-md);
+} */
