--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -45,21 +45,21 @@ figure img {
     width: 100%;
 }
 
-figure:has(img + figcaption) figcaption {
-    display: block;
+figure a img {
+    padding: var(--fixed-space-md);
 }
 
 figure:has(a) {
     text-align: center;
 }
 
-figure:has(a) img {
-    padding: var(--fixed-space-md);
-}
-
 figure:has(a) figcaption {
     padding: var(--fixed-space-sm) var(--fixed-space-md);
     margin-top: var(--layout-space-xs);
+}
+
+figure:has(img + figcaption) figcaption {
+    display: block;
 }
 
 /*****
