Adding buttons & links styles

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -62,6 +62,11 @@ figure:has(img + figcaption) figcaption {
     display: block;
 }
 
+figure a:focus {
+    outline-width: var(--fixed-space-xs);
+    outline-offset: 0rem;
+}
+
 /*****
  ***
  ***   Base: List
